--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="js/c3.js"></script>
     <script src="js/xcharts.js"></script>
+    <script src="js/createDialog.js"></script>
     <script src="js/tc.js"></script>
+
 </head>
 <body ng-app="starter">
         <!--
