Trying azure on-device.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src="js/xcharts.js"></script>
     <script src="js/createDialog.js"></script>
     <script src="js/tc.js"></script>
+	<script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.7.min.js"></script>
+
 
 </head>
 <body ng-app="starter">
