--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <script src="js/xcharts.js"></script>
     <script src="js/createDialog.js"></script>
     <script src="js/tc.js"></script>
-	<script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.7.min.js"></script>
-
+	<script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-2.0.0-beta.min.js"></script>
 
 </head>
 <body ng-app="starter">
